fix fortune height in the header.
In order to make the size of the header consistent between pages
regardless of how many lines are output by the fortune function, set the
minimum size of the subtitle to a fixed amount.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,8 +54,10 @@ h1.title
 .subtitle
 {
 	text-align: center;
+	vertical-align: top;
 	font-style: italic;
 	margin: 0 auto;
+	min-height: 2.5em;
 }
 
 /* the page header */
