--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,30 @@ ul.project-frontmatter ul li
 	content: "Footnotes:";
 }
 
+/* a section at the bottom for displaying fortunes. */
+#fortune
+{
+	border-style: solid none;
+	border-width: 1px;
+	border-color: gray;
+}
+
+#fortune p
+{
+	text-align: center;
+}
+
+#fortune p.cite
+{
+	text-align: right;
+	display: block;
+	width: 100%;
+}
+#fortune p.cite::before
+{
+	content: " — ";
+}
+
 /* large images will resize to fit the body; smaller images will be centered */
 img
 {
