--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 		<title>{% if page.title %}{{ page.title }}{% elsif site.description %}{{ site.description }}{% endif %}{% if site.title %}{% if page.title or site.description %} | {% endif %}{{ site.title }}{% endif %}</title>
 
 		<link rel = "stylesheet" type = "text/css" href = "/assets/css/style.css" />
+		<link rel = "stylesheet" type = "text/css" href = "/assets/css/syntax.css" />
 
 		<script type = "text/javascript" src = "/assets/js/fortune.js"></script>
 	</head>
