move assets into appropriate folders.
The assets/ folder was kind of an unnecessary layer of directories and
doesn't reflect my normal directory structure, so I've moved the files
accordingly.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
 		{% comment %} (page title) | (site title) {% endcomment %}
 		<title>{% if page.title %}{{ page.title }}{% elsif site.description %}{{ site.description }}{% endif %}{% if site.title %}{% if page.title or site.description %} | {% endif %}{{ site.title }}{% endif %}</title>
 
-		<link rel = "stylesheet" type = "text/css" href = "/assets/css/style.css" />
-		<link rel = "stylesheet" type = "text/css" href = "/assets/css/syntax.css" />
+		<link rel = "stylesheet" type = "text/css" href = "/css/style.css" />
+		<link rel = "stylesheet" type = "text/css" href = "/css/syntax.css" />
 
-		<script type = "text/javascript" src = "/assets/js/fortune.js"></script>
+		<script type = "text/javascript" src = "/js/fortune.js"></script>
 	</head>
 
 	<body>
