fix blocking of previews in the Portfolio page.
The individual project previews should all be on their own line so that
the formatting doesn't go all funky because of the floating image
elements.

--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ img
 
 .post-preview
 {
-	float: left;
+	width: 100%;
 }
 
 /* for portfolio pages, formatting for screenshots/preview images which can
