--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+<!-- Project page content -->
 <h1>{{ page.title }}</h1>
 
 {% if page.preview %}
@@ -42,3 +43,4 @@ layout: default
 </p>
 
 {{ content }}
+<!-- End project page content -->
