--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,16 @@ details
     border-style: solid;
     border-color: black;
     border-width: 1px;
-    padding: 1em 0.5em;
+    padding: 0.5em;
+}
+details summary
+{
+    display: block;
+    width: 100%;
+    border-style: solid;
+    border-color: black;
+    border-width: 0 0 1px 0;
+    margin: 0 0 0.5em 0;
 }
 
 /* a section at the bottom for displaying fortunes. */
