--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,13 @@ details
 {
     display: block;
     width: 100%;
-    background-color: #ddd;
+    background-color: #eee;
     padding: 0.5em;
+}
+details summary
+{
+    display: block;
+    padding: 0 0 0.5em 0;
 }
 
 /* a section at the bottom for displaying fortunes. */
