--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,10 @@ details
     display: block;
     width: 100%;
     background-color: #eee;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
     padding: 0.5em;
 }
 details summary
