Add a space bt the manicule and important text.

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ details summary
 /* a way to mark certain sections as "important." */
 .important:before
 {
-	content: '\261E';
+	content: "\261E ";
 }
 
 /* a section at the bottom for displaying fortunes. */
