--- a/css/style.css
+++ b/css/style.css
@@ -135,15 +135,14 @@ details
 {
 	display: block;
 	width: 100%;
-	background-color: #eee;
 	margin-top: 1em;
 	margin-bottom: 1em;
 	margin-left: 0;
 	margin-right: 0;
-	padding: 0.5em;
 }
 details summary
 {
+	text-decoration: underline dotted;
 	padding: 0 0 0.5em 0;
 	cursor: pointer;
 }
